python3.12 (3.12.4-4) UNRELEASED; urgency=medium

  * Don't pass -specs=package-metadata.specs.

 -- Matthias Klose <doko@debian.org>  Thu, 01 Aug 2024 04:50:31 +0200

python3.12 (3.12.4-3) unstable; urgency=medium

  [ Matthias Klose ]
  * Set ELF_PACKAGE_METADATA, if unset.
  * Fix multiarch path for hurd-amd64. Closes: #1076321.
  * Don't configure -with-dtrace on the Hurd. Closes: #1065456.
  * Update from the 3.12 branch 2024-07-15.

  [ Benjamin Drung ]
  * debian/rules: Use pkg-info.mk.
  * debian/rules: Use architecture.mk.
  * Rely on SOURCE_DATE_EPOCH for reproducibility.

  [ Graham Inggs ]
  * Drop test dependencies on python3-distutils.
  * Skip test_exceptions and test_repl which never run to
    completion on the Ubuntu autopkgtest infrastructure.

 -- Matthias Klose <doko@debian.org>  Mon, 15 Jul 2024 14:17:32 +0200

python3.12 (3.12.4-1) unstable; urgency=medium

  * Python 3.12.4 release.
  * Refresh patches.
  * Patch: Ignore test/wheeldata completely in test_makefile.

 -- Stefano Rivera <stefanor@debian.org>  Wed, 12 Jun 2024 20:06:53 +0100

python3.12 (3.12.3-1) unstable; urgency=medium

  * Python 3.12.3 release.

 -- Matthias Klose <doko@debian.org>  Wed, 10 Apr 2024 07:33:47 +0200

python3.12 (3.12.2-5) unstable; urgency=medium

  * Update to the 3.12 branch 2024-02-02.
    - Make C API compatible with ISO C90 (GH-116950). Closes: #1064028.
    - Upstream patch for GH-115874.
    - Still identify as "3.12.2", because "3.12.2+" is mis-treated by some
      third-party packages.
  * Use CFLAGS_NODIST, LDFLAGS_NODIST for passing build flags.
  * d/rules: Move configure/build targets for each build together.
  * Drop ffi configure options, obsolete.
  * Re-enable PGO/LTO builds.

 -- Matthias Klose <doko@debian.org>  Tue, 02 Apr 2024 16:53:02 +0200

python3.12 (3.12.2-4) unstable; urgency=medium

  [ Stefano Rivera ]
  * Build-Depend on libnsl-dev for NIS support. Closes: #1065128.

  [ Matthias Klose ]