@@ -9,7 +9,7 @@ Build-Depends: debhelper (>= 11), @bd_dpkgdev@
   libreadline-dev | libeditreadline-dev, libncurses-dev, @bd_gcc@
   zlib1g-dev, libbz2-dev, liblzma-dev,
   libgdbm-dev, @bd_dbm@,
-#  tk-dev, blt-dev (>= 2.4z),
+  tk-dev, blt-dev (>= 2.4z),
   libssl-dev,
   libexpat1-dev,
   libbluetooth-dev [linux-any] <!pkg.@PVER@.nobluetooth>,
@@ -19,7 +19,8 @@ Build-Depends: debhelper (>= 11), @bd_dpkgdev@
   libgpm2 [linux-any],
   media-types | mime-support, netbase, bzip2, time, python3@bd_qual@, @PVER@@bd_qual@ <cross>,
   net-tools,
-#  xvfb <!nocheck>, xauth <!nocheck>, tzdata <!nocheck>,
+#  xvfb <!nocheck>, xauth <!nocheck>,
+  tzdata <!nocheck>,
   systemtap-sdt-dev [!hurd-amd64 !hurd-i386],
   valgrind-if-available,
 Build-Depends-Indep: python3-sphinx, python3-docs-theme, texinfo
